# semantouch

./: .gitignore  .mcp.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Package.swift  README.md  README.zh-CN.md  justfile  package-lock.json  package.json
.claude-plugin/: marketplace.json  plugin.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: config.yml  feature_request.yml  linux_wayland.yml  macos_runtime.yml  release_install.yml  windows.yml
.github/workflows/: ci.yml  demo-media.yml  homebrew.yml  npm.yml  release.yml  runtime.yml
Sources/AccessibilityEngine/: AXClickTargetResolver.swift  AXClient.swift  AXObserverCoordinator.swift  AXTreeBuilder.swift  AXTreeDiff.swift  AXTreeRenderer.swift  AccessibilityEngine.swift  SettleDetector.swift  StableElementTable.swift  UINode.swift  WaitForEvaluator.swift  WebContentAccessibility.swift
Sources/ActionEngine/: AXActionElement.swift  ActionEngine.swift  ActionExecutor.swift  CGEventSynthesizer.swift  FallbackInput.swift  FocusTransaction.swift  KeyboardActions.swift  PointerActions.swift  ScrollActions.swift  SemanticActions.swift  TextActions.swift  UserInterruptionMonitor.swift
Sources/CaptureEngine/: CaptureEngine.swift  CoordinateMapper.swift  ScreenshotEncoder.swift  WindowCapture.swift  WindowCatalog.swift  WindowCorrelation.swift
Sources/ComputerUseCore/: AppResolver.swift  Cancellation.swift  CanonicalJSON.swift  DTOs.swift  Errors.swift  Geometry.swift  Policy.swift  SessionTypes.swift  Trace.swift
Sources/ComputerUseFixture/: AppDelegate.swift  Config.swift  EventLog.swift  main.swift
Sources/ComputerUseService/: AppLauncher.swift  AppLister.swift  AppStateBuilder.swift  DoctorService.swift  MCPRuntime.swift  Packaging.swift  Probes.swift  ReadTextService.swift  ScreenshotService.swift  ServiceActionEnvironment.swift  ServiceContext.swift  ToolHandlers.swift  UpdateService.swift  WaitForService.swift  WindowResolution.swift
Sources/CursorDemo/: CursorDemoMain.swift  DemoRenderer.swift
Sources/CursorOverlay/: CursorAnimator.swift  CursorArt.swift  CursorController.swift  CursorPanel.swift  CursorPlan.swift  CursorTrajectory.swift
Sources/MCPServer/: JSONRPC.swift  JSONValue.swift  MCPServer.swift  StdioTransport.swift  ToolCatalog.swift  ToolRegistry.swift  ToolSchemas.swift
Sources/SemantouchApp/: AppDelegate.swift  HostController.swift  OnboardingWindowController.swift  PermissionPresentationModel.swift  main.swift
Sources/SemantouchCLI/: main.swift
Sources/SemantouchCLIKit/: CallCommand.swift  CallHostTransport.swift  Packaging.swift
Sources/SemantouchIPC/: FrameCodec.swift  HostClient.swift  HostListener.swift  HostProtocol.swift  IPCError.swift  OpaqueRelay.swift  PeerTrust.swift  SocketLocation.swift  SocketSyscalls.swift
Tests/AccessibilityEngineTests/: AXClickTargetResolverTests.swift  AXObserverCoordinatorTests.swift  AXTreeDiffTests.swift  AXTreeRendererTests.swift  AccessibilityEngineTests.swift  SettleDetectorTests.swift  StableElementTableTests.swift  WaitForEvaluatorTests.swift  WebContentAccessibilityTests.swift
Tests/ActionEngineTests/: ActionExecutorTests.swift  Fakes.swift  FallbackExecutorTests.swift  FocusTransactionTests.swift  InterferencePlanTests.swift  KeyboardActionsTests.swift  PointerActionsTests.swift  ScrollActionsTests.swift  SemanticActionsTests.swift  TextActionsTests.swift  UserInterruptionMonitorTests.swift
Tests/CaptureEngineTests/: CaptureEngineTests.swift  CoordinateMapperTests.swift  ScreenshotEncoderTests.swift  WindowCaptureTests.swift  WindowCatalogTests.swift  WindowCorrelationTests.swift
Tests/ComputerUseCoreTests/: ActionResultEncodingTests.swift  AppResolverTests.swift  AppStateEncodingTests.swift  CUErrorTests.swift  CancellationTests.swift  GetAppStateRequestTests.swift  PolicyEngineTests.swift  ScreenshotResultEncodingTests.swift  TraceTests.swift
Tests/CursorOverlayTests/: CocoaRectTests.swift  CursorAnimatorTests.swift  CursorControllerTests.swift  CursorMotionTests.swift  CursorPlanTests.swift  Fakes.swift
Tests/MCPServerTests/: CancellationDispatchTests.swift  JSONValueTests.swift  MCPServerTests.swift  StdioTransportTests.swift
Tests/ProtocolContractTests/: AppLifecycleTests.swift  PackagingTests.swift  (+7 more)
commands/: semantouch-doctor.md  semantouch-update.md
docs/: ARCHITECTURE.md  COMPETITIVE-ANALYSIS.md  FIXTURE.md  INSTALL.md  OVERVIEW.md  PLAN.md  PROTOCOL.md  RELEASE.md  SECURITY.md  TEST-MATRIX.md  USAGE.md
packaging/: README.md  omp-mcp-config.example.json  semantouch.plugin.json
runtime/: Cargo.toml  README.md
runtime/crates/semantouch-adapter/: Cargo.toml
runtime/crates/semantouch-adapter/src/: lib.rs
runtime/crates/semantouch-core/: Cargo.toml
runtime/crates/semantouch-core/src/: cancellation.rs  coordinator.rs  diff.rs  fingerprint.rs  lib.rs  policy.rs  renderer.rs  session.rs  stable_ids.rs  tree.rs  wait.rs
runtime/crates/semantouch-linux/: Cargo.toml
runtime/crates/semantouch-linux/src/: lib.rs  native.rs
runtime/crates/semantouch-protocol/: Cargo.toml
runtime/crates/semantouch-protocol/src/: capability.rs  catalog.rs  dto.rs  error.rs  geometry.rs  ids.rs  lib.rs
runtime/crates/semantouch-runtime/: Cargo.toml
runtime/crates/semantouch-runtime/src/: jsonrpc.rs  lib.rs  main.rs  mcp_tests.rs  server.rs  stdio.rs
runtime/crates/semantouch-windows/: Cargo.toml
runtime/crates/semantouch-windows/src/: lib.rs  native.rs
scripts/: agent-smoke-lib.mjs  agent-smoke-scenarios.mjs  assemble-app  make-universal2  notarize-release  package-app-release  record-demo-evidence.mjs  run-agent-smoke-tests.mjs  run-agent-stress.mjs  run-permission-onboarding-smoke.mjs  semantouch  sign-release  verify-app-release  verify-cross-platform-contract.mjs  verify-release-metadata
(+59 files in other folders)
