[workspace]
resolver = "2"
members = [
    "crates/semantouch-protocol",
    "crates/semantouch-core",
    "crates/semantouch-adapter",
    "crates/semantouch-windows",
    "crates/semantouch-linux",
    "crates/semantouch-runtime",
]
default-members = [
    "crates/semantouch-protocol",
    "crates/semantouch-core",
    "crates/semantouch-adapter",
    "crates/semantouch-runtime",
]

[workspace.package]
version = "0.3.4"
edition = "2021"
license = "MIT"
repository = "https://github.com/watzon/semantouch"
rust-version = "1.88"

[workspace.dependencies]
semantouch-protocol = { path = "crates/semantouch-protocol", version = "0.3.4" }
semantouch-core = { path = "crates/semantouch-core", version = "0.3.4" }
semantouch-adapter = { path = "crates/semantouch-adapter", version = "0.3.4" }
semantouch-windows = { path = "crates/semantouch-windows", version = "0.3.4" }
semantouch-linux = { path = "crates/semantouch-linux", version = "0.3.4" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
parking_lot = "0.12"
indexmap = { version = "2.7", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
image = { version = "0.25", default-features = false, features = ["jpeg"] }
