[package]
name = "semantouch-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared coordinator: sessions, stable IDs, diffs, policy, waits, action evidence"
publish = false

[dependencies]
semantouch-protocol = { workspace = true }
semantouch-adapter = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
parking_lot = { workspace = true }
indexmap = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
